logs/validate.20260326-135922.log
error[E0308]: mismatched types
   --> src/Chap55/TopoSortStEph.rs:578:55
    |
578 |                 proof { lemma_bool_view_eq_spec_index(visited); }
    |                         ----------------------------- ^^^^^^^ expected `&ArraySeqStEphS<bool>`, found `ArraySeqStEphS<bool>`
    |                         |
    |                         arguments to this function are incorrect
    |
    = note: expected reference `&Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<_>`
                  found struct `Chap19::ArraySeqStEph::ArraySeqStEph::ArraySeqStEphS<_>`
note: function defined here
   --> src/Chap55/TopoSortStEph.rs:122:14
    |
122 |     proof fn lemma_bool_view_eq_spec_index(a: &ArraySeqStEphS<B>)
    |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ---------------------
help: consider borrowing here
    |
578 |                 proof { lemma_bool_view_eq_spec_index(&visited); }
    |                                                       +

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
Elapsed: 5s
Sampled Memory Usage: peak rust_verify RSS: 3138MB, peak z3 RSS: 1943MB, min free: 20059MB
Sampled CPU Usage: rust_verify: 62s, z3 children: 50s
